# phantomfill

./: .gitignore  Cargo.toml  README.md
examples/: depth_imbalance.rhai  gabagool.rhai  last_15s.rhai  momentum.rhai  post_cancel.rhai  post_cancel_results.csv  spread_arb.rhai  template.rhai
src/: lib.rs  replay.rs  report.rs  types.rs
src/data/: huggingface.rs  mod.rs  polymarket.rs  schema.rs  store.rs
src/fill/: delise.rs  mod.rs  model.rs  queue.rs
src/strategies/: depth.rs  fade.rs  gabagool.rs  last_15s.rs  mod.rs  momentum.rs  post_cancel.rs  scripted.rs  spread_arb.rs
