[package]
name = "phantomfill"
version = "0.1.0"
edition = "2021"
description = "The honest prediction market backtester. See what would ACTUALLY happen — with realistic fill simulation, queue position modeling, and adverse selection."
license = "MIT"
repository = "https://github.com/deividfortuna/phantomfill"
keywords = ["polymarket", "prediction-market", "backtesting", "simulation", "trading"]
categories = ["simulation", "finance"]

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Data
rusqlite = { version = "0.33", features = ["bundled"] }
csv = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Stats
rand = "0.8"

[[bin]]
name = "pf"
path = "src/bin/pf.rs"

[lib]
name = "phantomfill"
path = "src/lib.rs"
